# hal

./: .gitignore  pyproject.toml
hal/: constants.py  emulator_helper.py  gamestate_utils.py  iter_utils.py  local_paths.py
hal/data/: calculate_stats.py  extract.py  process_replays.py  schema.py  stats.py  streams.py
hal/eval/: eval.py  eval_helper.py  play.py  self_play.py
hal/preprocess/: input_configs.py  input_configs_multi_token.py  postprocess_configs.py  postprocess_configs_multi_token.py  preprocessor.py  registry.py  target_configs.py  target_configs_multi_token.py  test_encoding.py  test_postprocess_preds.py  transformations.py
hal/training/: config.py  distributed.py  io.py  losses.py  multi_token_trainer.py  optim.py  simple_trainer.py  streaming_dataloader.py  streaming_dataset.py  trainer.py  value_trainer.py
hal/training/archive/: gaussian_loss_trainer.py  independent_button_trainer.py
hal/training/models/: gpt.py  gpt_cached.py  gpt_multi_token.py  lstm.py  mlp.py  registry.py
hal/training/schedule/: schedule.py
notebooks/: analyze_stages.py  benchmark_gpt.py  benchmark_multi_cpu_worker_cuda_copy.py  benchmark_pyarrow.py  benchmark_tensordict_slicing.py  copy_mp_shared_memory_buffer.py  ddp_tensordict.py  debug_ddp.py  debug_emulator.py  debug_one_hot.py  explore.py  find_analog_clusters.py  hyperparam_sweep.py  load.py  multishine.py  scratch.py  shared_dataset_ddp.py  shared_memory_ddp.py  sinusoidal.py  test_button_encoding.py  test_dataloader.py  test_ddp.py  test_emulator.py  test_flexattention.py  test_gaussian_loss.py  test_inmemorydataloader.py  test_kv_cache.py  test_multishine.py  test_streaming_dataloader.py  verify_preprocess_and_emulator.py  visualize_parquet.py
