[project]
name = "hal"
version = "0.1.0"
description = "HAL - Melee AI System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "autoflake",
    "autotyping",
]

[tool.black]
line_length = 119
target_version = ["py311"]
exclude = '''
(
    /(
        \.git
    |   \.mypy_cache
    |   \.tox
    |   \.venv
    |   build
    |   venv
    )
)
'''

[tool.isort]
profile = "black"
line_length = 119
known_first_party = ["hal"]
known_third_party = ["docker", "libmelee", "slippi-Ishiiruka"]
indent = "    "
force_single_line = true
case_sensitive = true
order_by_type = false

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hal"]
