[project]
name = "hal"
version = "0.1.0"
description = "HAL - Melee AI System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "attrs>=25.3.0",
    "loguru>=0.7.3",
    "melee",
    "mosaicml-streaming>=0.10.0",
    "numpy>=2.3.2",
    "tensordict>=0.9.1",
    "torch>=2.7.1",
    "wandb>=0.21.0",
    "yasoo>=0.12.6",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "autoflake",
    "autotyping",
]

[tool.black]
line_length = 119
target_version = ["py311"]
exclude = '''
(
    /(
        \.git
    |   \.mypy_cache
    |   \.tox
    |   \.venv
    |   build
    |   venv
    )
)
'''

[tool.isort]
profile = "black"
line_length = 119
known_first_party = ["hal"]
known_third_party = ["docker", "libmelee", "slippi-Ishiiruka"]
indent = "    "
force_single_line = true
case_sensitive = true
order_by_type = false

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hal"]

[tool.uv.sources]
melee = { git = "https://github.com/vladfi1/libmelee.git", rev = "dev" }
